added lambda to register devices
